Commit 1: BudgetController changes, using ResponseEntity